<resources>
    <string name="app_name">Turismo</string>

    <!-- Global Strings -->
    <string name="txt_empty"></string>
    <string name="action_settings">Configurações</string>
    <string name="action_confirmar">Confirmar</string>
    <string name="action_entrar">Entrar</string>
    <string name="label_limpar">Limpar</string>
    <string name="label_confirmar">Confirmar</string>

    <!-- Strings related to login -->
    <string name="label_login">Controle de Acesso</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_create">Criar Conta</string>
    <string name="error_invalid_email">E-mail invalido</string>
    <string name="error_invalid_password">Senha deve conter no mínimo 8 caracteres</string>
    <string name="error_incorrect_password">Senha invalido</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_exibir_senha">Mostra senha</string>
    <string name="label_mantenhame_conectado">Mantenha-me conectado</string>

    <!-- Tela de Preferencias -->
    <string name="label_preferencias">Preferencias</string>
    <string name="section_format">%1$d</string>

    <!-- Tela de Principal -->
    <string name="label_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Tela de Profile -->
    <string name="label_profile">Cadastro</string>
    <string name="label_info_usuario">Dados de Cadastro</string>
    <string name="prompt_name">Nome</string>
</resources>
